# enhancify

./: README.md  main.py  pyproject.toml
authcord/: __init__.py
web/: __init__.py  config.py  forms.py  login.py  models.py  processors.py  routes.py
web/static/css/: style.css
web/static/js/: replauth.js  script.js
web/templates/: dashboard.html  index.html  login.html  project.html
web/templates/layouts/: base.html
