[tool.poetry]
name = "cj-10"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-login = "^0.5.0"
flask-migrate = "^2.5.3"
flask-sqlalchemy = "^2.4.4"
psycopg2-binary = "^2.8.6"
app = "^0.0.1"
oauthlib = "^3.1.0"
itsdangerous = "^1.1.0"
repltalk = "^0.8.17"
wtforms = "^2.3.3"
flask-wtf = "^0.14.3"
sqlalchemy = "^1.3.20"
black = "^20.8b1"
yapf = "^0.30.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
